Fix overflow styles

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ button:last-child {
 
 .q_container {
   width: 75%;
-  margin: 15% auto;
+  margin: 12% auto;
   font-size: 2rem;
   line-height: 3.5rem;
   display: flex;
